Fix home page alignment

--- a/src/main.css
+++ b/src/main.css
@@ -11,8 +11,7 @@ html, body, #root {
 }
 
 .container {
-    height: 100%;
-    overflow-y: auto;
+    min-height: 100%;
 }
 
 body {
@@ -22,7 +21,6 @@ body {
     line-height: 1.13;
     background-color: white;
     margin: 0;
-    overflow: hidden;
 }
 
 pre {
@@ -62,7 +60,7 @@ ul {
 main {
     position: relative;
     flex: 16;
-    height: 100%;
+    max-height: 100vh;
 }
 
 a {
